--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "allowedCommonJsDependencies": [ "lodash" ],
+            "allowedCommonJsDependencies": [ "lodash", "lottie-web" ],
             "assets": [
               {
                 "glob": "**/*",
@@ -76,7 +76,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "app:build"
+            "browserTarget": "app:build",
+            "proxyConfig": "proxy.json"
           },
           "configurations": {
             "production": {
