--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve --progress --host 0.0.0.0 --port 3380",
     "build": "ng build --progress",
-    "build-server": "ng build --prod --aot --progress --vendor-chunk --common-chunk --delete-output-path --buildOptimizer",
+    "build-server": "ng build --prod --aot --progress --vendor-chunk --common-chunk --delete-output-path --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
