--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               },
               "src/manifest.webmanifest"
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": ["node_modules/ng-zorro-antd-mobile/src/ng-zorro-antd-mobile.min.css", "src/theme/variables.scss", "src/global.scss"],
             "stylePreprocessorOptions": {
               "includePaths": [
                 "src"
