--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
+    "clipboard": "^2.0.8",
     "lottie-web": "^5.7.6",
     "ng-zorro-antd-mobile": "^4.0.0",
     "rxjs": "~6.6.0",
